# qrtr

./: .gitignore  Android.bp  meson.build
.github/workflows/: ci.yml
ci/: archlinux.sh  debian.cross-compile.sh  debian.sh  fedora.sh
src/: lookup.c  meson.build
